--- a/abilities.html
+++ b/abilities.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Abhisit's Abilities</title>
+    <title>Thanwarat'P Abilities</title>
 </head>
 
 <body>
