--- a/experiences.html
+++ b/experiences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Abhisit's Experiences</title>
+    <title>Thanwarat'P Experiences</title>
 </head>
 <body>
     <!-- Menu -->
@@ -35,26 +35,7 @@
             --- Albert Einstein ---</h5> 
     <table style="margin-left: auto; margin-right: auto">
         <tbody>
-            <tr>
-              <td>
-                <h2>Teaching Experiences</h2>
-                <ul type="circle">
-                    <li>Multimedia Programming</li>
-                    <li>Advanced SQL</li>
-                    <li>.NET Programming</li>
-                </ul>
-                <h2>Certificate</h2>
-                <ul type="disc">
-                    <li>IBM Full Stack Software Developer Professional</li>
-                    <li>Google Data Analytics Professional</li>
-                    <li>DevOps on AWS Specialization</li>
-                    <li>SQL Advanced</li>
-                </ul>
-                <h2>Research Interests</h2>
-                <ol>
-                    <li>Big Data</li>
-                    <li>Data Visualization</li>
-                    <li>Artificial Intelligence and Data Science</li>
+            
                 </ol>                
               </td>
             </tr>
